# code

./: .gitignore  TODO.md
chrome_home_page/: index.html  package-lock.json  package.json
client/: index.html
client/src/: App.tsx
client/src/components/: trainTracker.tsx  trainTrackerItem.tsx
client/src/styles/: train.tsx
constants/: files.py
db/: main.py  pyproject.toml  replace.sh  secret_loader.py
mta_backend/: .gitignore
mta_backend/src/: env_loader.py
mta_backend/src/google_maps_api/: google_maps_api.py
mta_backend/src/mtapi/: mtapi.py
scripts/: format_brackets.py  memory_free.py  password_generator.py  pyproject.toml
server/: README.md  main.py  pyproject.toml
server/data/: make_stations_json.py
server/src/mtaproto/: feedresponse.py  nyct_subway_pb2.py
setup/: MACOS_setup.md  install-packages.sh  main.py  pyproject.toml
setup/daemon_configs/: archer.filehost.daemon.plist  archer.homebrew.update.plist  archer.mtapi.daemon.plist  archer.server.daemon.plist
setup/dotfiles/: .archer_profile  .bash_profile  .zprofile
setup/src/: install.py  install_config.py  install_types.py  install_utils.py
shredder/: Cargo.toml  DEV.md  README.md  pyproject.toml
shredder/src/: lib.rs  main.rs  shredder.rs
shredder/src/shredder/: __init__.py  _core.pyi  impl.py
shredder/tests/: test_shred.py
test/: main.py  pyproject.toml
utils/: pyproject.toml
utils/src/utils/: __init__.py  common.py  constants.py  files.py  git.py  macos.py
utils/test/: test_crypto.py
