[project]
name = "db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ArcherHeffern", email = "heffernarcher@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "neomodel>=6.0.1",
]

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"
