[project]
name = "utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ArcherHeffern", email = "heffernarcher@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
]

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"
